http://www.nsnam.org including tutorials: http://www.nsnam.org/tutorials.html

Consult the file CHANGES.html for more detailed information about changed
API and behavior across ns-3 releases.

Release 3.11
===========

Availability
------------
This release is not yet available.

Supported platforms
-------------------

New user-visible features
-------------------------

Bugs fixed
----------
The following lists many of the bugs fixed or small feature additions
since ns-3.10, in many cases referencing the Bugzilla bug number.

   - Fixed the UanPhyGen::IsStateBusy method, error with logical OR
   - CsmaNetDevice ReceiveErrorModel was not dropping the packet
   - bug 1064 - Correct Friis propagation loss equation in spectrum module
   - bug 1046 - Check Aodv LocalDeliver callback before using it

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.10
===========

Availability
------------
This release is available from: 
http://www.nsnam.org/releases/ns-allinone-3.10.tar.bz2

Supported platforms
-------------------
ns-3.10 has been tested on the following platforms.  Not all features are
available on all platforms; check the Installation page on the project wiki.

- Linux i686 Ubuntu 10.10
  - g++-4.4.5
- Linux x86_64 Ubuntu 8.04.4
  - g++-3.4.6, g++-4.2.4
- Linux x86_64 Fedora Core 12
  - g++-4.4.4
- Linux x86_64 Fedora Core 10
  - g++-3.4.6, 4.0.4, 4.1.2, 4.2.4, 4.3.4, 4.4.0
- OS X Snow Leopard
  - g++-4.2.1 
- OS X powerpc Leopard 
  - g++-4.0, g++-4.2

New user-visible features
-------------------------

   - NS-3 PyViz, a live simulation visualizer, has been added.  The 
     visualizer interacts with a running simulation, such that it uses no
     trace files. It can be most useful for debugging purposes, i.e. to
     figure out if mobility models are what you expect, where packets are
     being dropped, etc. There is also a builtin interactive python console